--- a/templates/partials/top_menu.html.twig
+++ b/templates/partials/top_menu.html.twig
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand fixed-top d-flex flex-row justify-content-start">
-    <div class="d-none d-lg-block">
+    {#<div class="d-none d-lg-block">
         <form>
             <div id="menu-minifier">
                 <label>
@@ -19,8 +19,14 @@
             </div>
         </form>
     </div>
-    <a class="navbar-brand px-lg-3 px-1 mr-0 d-none d-sm-block" href="#"><h6>CLEVER ELECTRIC Technologies</h6></a> 
-    <!--
+    #}
+    <div class="nav-item d-lg-none d-xl-block">
+        <a class="nav-link active" href="{{ path("home_page") }}">
+            <svg class="icon-sprite"><use xlink:href="/images/icons-sprite.svg#home"/></svg> 
+        </a>
+    </div>
+    <a class="navbar-brand px-lg-3 px-1 mr-0 d-none d-lg-block d-xl-none" href="#"><h6>CLEVER ELECTRIC Technologies</h6></a> 
+    <!-- d-none d-sm-block d-md-none d-lg-block
     <a class="navbar-brand px-lg-3 px-1 mr-0 " href="#">
         <svg class="icon-sprite icon">
              <use class="glow" fill="url(#radial-glow)" xlink:href="/images/icons-sprite.svg#glow"/> 
@@ -46,15 +52,25 @@
                     <svg class="icon-sprite"><use xlink:href="/images/icons-sprite.svg#user"/></svg>
                 </button>
                 <div class="dropdown-menu dropdown-menu-right">{#  #}
-                    <a class="dropdown-item" href="{{ path('account_profile', {'id': user.id}) }}">Profile</a>
+                    <a class="dropdown-item" href="{{ path('account_profile', {'id': user.id}) }}"><i class="fa fa-user pull-right"></i>Profile</a>
+                    <a class="dropdown-item" href="{{ path('account_password', {'id': user.id}) }}"><i class="fa fa-edit pull-right"></i>Password</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="{{ path('account_logout') }}"><i class="fas fa-sign-out pull-right"></i>Logout</a>
+                    <a class="dropdown-item" href="{{ path('account_logout') }}"><i class="dripicons-exit pull-right"></i>Logout</a>
                 </div>
             </div>
-            <div class="nav-item d-lg-none">
+            <div class="nav-item d-lg-none d-xl-block">
+                <!--
                 <button id="sidebar-toggler" type="button" class="btn btn-link nav-link" data-toggle="offcanvas">
                     <svg class="icon-sprite"><use xlink:href="/images/icons-sprite.svg#menu"/></svg>
-                </button>
+                </button> 
+                -->
+                {% if is_granted('ROLE_ADMIN') == true %}
+                    
+                    <a class="nav-link" href="{{path("super_admin_settings")}}">
+                        <svg class="icon-sprite"><use xlink:href="/images/icons-sprite.svg#settings"/></svg>
+                    </a>
+                   
+                {% endif	%}
             </div>
         </div>
     </div>
