--- a/templates/account/login.html.twig
+++ b/templates/account/login.html.twig
@@ -52,7 +52,7 @@
 											<span class="auth-form-icon">
 												<i class="dripicons-user"></i>
 											</span>
-											<input type="text" class="form-control" name="_username" id="username" placeholder="Enter user Email">
+											<input type="text" class="form-control" name="_username" id="username" placeholder="Enter user Email" value="{{username}}">
 										</div>
 									</div>
 									<!--end form-group-->
