--- a/templates/account/profile.html.twig
+++ b/templates/account/profile.html.twig
@@ -5,17 +5,14 @@
 
 {% block body %}
 
-  <h1>Modification du profil de : {{ app.user.fullName }}</h1>
+  <h1>Modification du profil de : {{ user.fullName }}</h1>
 
   <div class="row">
     <div class="col-12 col-sm-10 offset-sm-1">
       <!-- Profile tabs START -->
       <ul class="nav nav-tabs nav-fill" role="tablist">
         <li class="nav-item">
-          <a class="nav-link {% if tab == 0 %}active{% endif %}" data-toggle="tab" href="#personal" role="tab">PERSONAL</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link {% if tab == 1 %}active{% endif %}" data-toggle="tab" href="#password" role="tab">PASSWORD</a>
+          <a class="nav-link active" data-toggle="tab" href="#personal" role="tab">PERSONAL</a>
         </li>
       </ul>
       <div class="info-holder info-ct">
@@ -24,7 +21,7 @@
       <!-- Profile tab panes -->
       <div class="tab-content px-4 px-sm-0 py-sm-4 mt-4">
         <!-- Personal pane START -->
-        <div class="tab-pane fade {% if tab == 0 %}show active{% endif %}" id="personal" role="tabpanel">
+        <div class="tab-pane fade show active" id="personal" role="tabpanel">
           {{ form_start(form) }}
           <!-- <form> -->
             <div class="form-group row">
@@ -62,12 +59,14 @@
                 {{ form_widget(form.phoneNumber, {'attr': {'class': "form-control custom-focus"}}) }}
               </div>
             </div>
+            {#
             <div class="form-group row">
               {{ form_label(form.avatar, null, {'label_attr': {'class': 'col-12 col-sm-3 col-form-label'}}) }}
               <div class="col-12 col-sm-9">
                 {{ form_widget(form.avatar, {'attr': {'class': "form-control custom-focus"}}) }}
               </div>
             </div>
+            #}
             <div class="form-group row">
               <div class="offset-xs-0 offset-sm-3 col-12 col-sm-9 mt-3">
                 <button type="submit" class="btn btn-primary">Save</button>
@@ -77,65 +76,10 @@
           {{ form_end(form) }}
         </div>
         <!-- Personal pane END -->
-        
-        <!-- Password pane START -->
-        <div class="tab-pane fade {% if tab == 1 %}show active{% endif %}" id="password" role="tabpanel">
-          {{ form_start(formPassword) }}
                 
-          <form>
-            <div class="form-group row">
-              {{ form_label(formPassword.oldPassword, null, {'label_attr': {'class': 'col-12 col-sm-3 col-form-label'}}) }}
-              <div class="col-12 col-sm-9">
-                {# {{ form_errors(formPassword.oldPassword) }} #}
-                {{ form_widget(formPassword.oldPassword, {'attr': {'class': "form-control custom-focus"}}) }}
-              </div>
-            </div>
-            <div class="form-group row">
-              {{ form_label(formPassword.newPassword, null, {'label_attr': {'class': 'col-12 col-sm-3 col-form-label'}}) }}
-              <div class="col-12 col-sm-9">
-                {# {{ form_errors(formPassword.newPassword) }} #}
-                {{ form_widget(formPassword.newPassword, {'attr': {'class': "form-control custom-focus"}}) }}
-              </div>
-            </div>
-            <div class="form-group row has-success">
-              {{ form_label(formPassword.confirmPassword, null, {'label_attr': {'class': 'col-12 col-sm-3 col-form-label'}}) }}
-              <div class="col-12 col-sm-9">
-                {# {{ form_errors(formPassword.confirmPassword) }} #}
-                {{ form_widget(formPassword.confirmPassword, {'attr': {'class': "form-control custom-focus "}}) }}
-              </div>
-            </div>
-            <div class="form-group row">
-              <div class="offset-xs-0 offset-sm-3 col-12 col-sm-9 mt-3">
-                <button type="submit" class="btn btn-primary">Save password</button>
-              </div>
-            </div>
-          </form>
-          {{ form_end(formPassword) }}
-        </div>
-        <!-- Password pane END -->
-        
       </div>
       <!-- Profile tabs END -->
     </div>
   </div>
-
-{% endblock %}
-
-{% block javascripts %}
-
-  <script>
-    var newPassword = $('#password_update_newPassword');
-    var confirmPassword = $('#password_update_confirmPassword');
-    console.log('newPassword type : ' + jQuery.type(newPassword.val()))
-    confirmPassword.on('input', function() { 
-      //console.log($(this).val()); // get the current value of the input field.
-      if( $(this).val() === newPassword.val() ){
-        confirmPassword.addClass("is-valid");
-      }
-      else{
-        confirmPassword.removeClass("is-valid");
-      }
-    });
-  </script>
 
 {% endblock %}
